@@ -1,3 +1,3 @@
-from devilry.restful import RestfulManager
+from trix_restful import RestfulManager
 
 trix_manager = RestfulManager()
